fix: chatbot 404에러 해결

--- a/chat_project/chatbot/templates/chatbot/chat.html
+++ b/chat_project/chatbot/templates/chatbot/chat.html
@@ -159,7 +159,7 @@
         const xhr = new XMLHttpRequest();
         xhr.open(
           "GET",
-          `/api/chat_message/${encodeURIComponent(message)}`,
+          `/chatbot/api/chat_message/${encodeURIComponent(message)}`,
           true
         );
 
